@@ -46,6 +46,7 @@ Current Version : 2.1.3
 
 Added smilies to Generic keyboard skin and changed it's appearance
 Added smilies to Transparency! keyboard skin
+Video skin now shows forum stats - currently works only with Tapatalk 
 
 *** 2.1.3 ***
 
